openturns/1.24/_sources/auto_calibration/bayesian_calibration/index.rst.txt


.. _sphx_glr_auto_calibration_bayesian_calibration:

.. _Bayesian calibration:

Bayesian calibration
--------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Gibbs sampling of the posterior distribution">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_gibbs_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_gibbs.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gibbs sampling of the posterior distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example is drawn from [1].">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_imh_python_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_imh_python_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sampling from an unnormalized probability density</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Posterior sampling using a PythonDistribution">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_rwmh_python_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_rwmh_python_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Posterior sampling using a PythonDistribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Bayesian calibration of a computer code">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_bayesian_calibration_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_bayesian_calibration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bayesian calibration of a computer code</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Bayesian calibration of the flooding model">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_bayesian_calibration_flooding_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_bayesian_calibration_flooding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bayesian calibration of the flooding model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This simple example shows how you can build your own variant of the Metropolis-Hastings algorithm.">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_ackley_distribution_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_ackley_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Customize your Metropolis-Hastings algorithm</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Linear Regression with interval-censored observations">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_gibbs_simus_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_gibbs_simus.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Linear Regression with interval-censored observations</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Bayesian calibration of hierarchical fission gas release models">

.. only:: html

  .. image:: /auto_calibration/bayesian_calibration/images/thumb/sphx_glr_plot_hierarchical_calibration_fission_gas_thumb.png
    :alt:

  :ref:`sphx_glr_auto_calibration_bayesian_calibration_plot_hierarchical_calibration_fission_gas.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Bayesian calibration of hierarchical fission gas release models</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_calibration/bayesian_calibration/plot_gibbs
   /auto_calibration/bayesian_calibration/plot_imh_python_distribution
   /auto_calibration/bayesian_calibration/plot_rwmh_python_distribution
   /auto_calibration/bayesian_calibration/plot_bayesian_calibration
   /auto_calibration/bayesian_calibration/plot_bayesian_calibration_flooding
   /auto_calibration/bayesian_calibration/plot_ackley_distribution
   /auto_calibration/bayesian_calibration/plot_gibbs_simus
   /auto_calibration/bayesian_calibration/plot_hierarchical_calibration_fission_gas

